# observing-java

./: .gitignore  README.md
.github/workflows/: build-claude-proxy.yaml  build-crew-merch-store.yaml  build-python-merch-store-otel-langchain-official-openai.yaml  build-python-merch-store-otel-langchain-official.yaml  build-spring-merch-store-arconia.yaml  build-spring-merch-store.yaml
coding-agents/claude/: main.go
java/spring-ai-with-arconia/spring-merch-store-arconia/: agent0.md  blog.md  pom.xml  skills.lock.json
java/spring-ai-with-arconia/spring-merch-store-arconia-openinference/: pom.xml
java/spring-ai-with-arconia/spring-merch-store-arconia/.codex/: hooks.json
java/spring-ai-with-arconia/spring-merch-store-arconia/.cursor/: hooks.json
java/spring-ai-with-arconia/spring-merch-store-arconia/.gemini/: settings.json
java/spring-ai/spring-merch-store/: skills.lock.json
python/crew-ai/crew-mech-store/: .dockerignore  Dockerfile  agent.py  inventory.py  main.py  memory.py  models.py  pyproject.toml  tools.py
python/crew-ai/crew-mech-store/crew_merch_store.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/crew-ai/crew-mech-store/static/assets/: index-0E16CFCE.js
python/crew-ai/crew-mech-store/webapp/: index.html  package-lock.json  vite.config.ts
python/crew-ai/crew-mech-store/webapp/src/: App.tsx
python/langchain/python-merch-store/: Dockerfile  README.md
python/langchain/python-merch-store-otel-langchain-official/: pyproject.toml
python/langchain/python-merch-store-otel-langchain-official-openai/: .env.example  Dockerfile  README.md  build-and-push.sh  pyproject.toml
python/langchain/python-merch-store-otel-langchain-official-openai/app/: agent.py  inventory.py  main.py  memory.py  tools.py
python/langchain/python-merch-store-otel-langchain-official-openai/static/: index.html
python/langchain/python-merch-store-otel-langchain-official-openai/webapp/src/: App.tsx
spring-boot/spring-merch-store/: agent0.md  guide.md  pom.xml
(+18 files in other folders)
